Correct theme name in composer file

--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,5 @@
 {
-    "name": "david/tsukiko",
+    "name": "david/tsukiko-theme",
     "license": "GPL2",
     "type":"wordpress-theme",
     "authors": [
