Correct package name... again.

--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,5 @@
 {
-    "name": "david/tsukiko-theme",
+    "name": "davidpeach/tsukiko-theme",
     "license": "GPL2",
     "type":"wordpress-theme",
     "authors": [
